crates/templates/tests/snapshots/root__impl-12.snap
---
source: crates/templates/tests/root.rs
description: "Function with a local and two global default options, one with the same name"
expression: output
---
root() {
  # Parse command arguments
  parse_root "$@"

  
  if [[ -z "${args['default']}" ]]; then
    args['default']="true"
  fi
  echo "No implementation body found for root function"
}


