crates/templates/tests/snapshots/root__impl-14.snap
---
source: crates/templates/tests/root.rs
description: Function with default positional argument
expression: output
---
root() {
  local rargs_default
  # Parse command arguments
  parse_root "$@"

  
  if [[ -z "$rargs_default" ]]; then
    rargs_default="true"
  fi
  echo "No implementation body found for root function"
}


